# ntropy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-stateless-filesystem-scanning-over-a-derived-index.md  0003-flat-single-vault-storage-layout.md  0004-note-identity-and-filename-strategy.md  0005-permissive-frontmatter-schema-with-recognized-fields.md  0006-hierarchical-tags-by-slash-convention.md  0007-vault-directory-layout.md  0008-materialized-symlink-views.md  0009-generic-group-by-field-view-definitions.md  0010-render-derived-dates-in-system-local-timezone.md  0011-embed-ripgrep-libraries-for-full-text-search.md  0012-query-dsl-with-hand-rolled-parser.md  0013-library-binary-split-with-thiserror-and-anyhow.md  0014-interactive-by-default-cli-with-auto-output-mode.md  0015-editor-integration-and-new-note-flow.md  0016-configuration-format-location-and-vault-resolution.md  0017-note-templates-with-placeholder-substitution.md  0018-cli-command-surface.md  0019-scan-robustness-and-resource-tolerance.md  0020-unix-only-v1-with-soft-performance-target.md  0021-testing-strategy-with-insta-across-all-layers.md  0022-distribute-via-crates-io-for-v1-under-mpl-2-0.md  (+18 more)
examples/: generate_vault.rs
scripts/: benchmark.sh
src/: datetime.rs  error.rs  fsutil.rs  gitignore.rs  id.rs  lib.rs  main.rs  reconcile.rs  scan.rs  template.rs  test_support.rs
tests/: cli.rs  views.rs
todos/: 01kvxwqq5vbjekr578jffved5m-linking-and-language-server.md  01kvxys57hdztv654z1xx5dge1-multi-note-editing.md  01kvxys57hdztv654z1xx5dge2-dsl-comparison-and-date-range-operators.md  01kvxys57hdztv654z1xx5dge3-per-view-filtering.md  01kvxys57hdztv654z1xx5dge4-json-output.md  01kvxys57hdztv654z1xx5dge5-windows-support.md  01kvxys57hdztv654z1xx5dge6-distribution-channels.md  01kvxys57hdztv654z1xx5dge7-named-templates.md  01kvxys57hdztv654z1xx5dge8-terminal-color-output.md  01kvy25nknkrp4py02f9kna3r7-view-freshness-incremental.md  01kvzehq2erj60pr87pgtv631w-picker-tier2-content-stats.md  01kvzkk1bvqnhfx3v6w7w80ytd-lsp-backlinks-references.md  01kvzkk1bvqnhfx3v6w7w80yte-lsp-hover-preview.md  01kvzkk1bvqnhfx3v6w7w80ytf-lsp-dangling-link-diagnostics.md  01kvzkk1bvqnhfx3v6w7w80ytg-lsp-document-symbol-outline.md  01kw1xb8h8qj1pkv2e4q8stxgf-readme-asciinema-demo.md  01kw20epgww8vz9phq3bt78n78-auto-gitignore-for-views.md  01kw4bdqkqfn8ep41cet8b1avz-cli-link-helpers.md  01kw4n4wqvk4m0jmfh8erpptre-force-interactive-flag.md  01kw4ntnvg8evgs683hfme4m55-view-sync-perf-presence-only-trusted-sync.md  01kw4ntnvg8evgs683hfme4m56-view-sync-perf-prune-from-walk.md  01kw4ntnvg8evgs683hfme4m57-view-sync-perf-parallel-views.md  01kw4ntnvg8evgs683hfme4m57-view-sync-perf-parallelize-cpu-and-io.md  01kw4ntnvg8evgs683hfme4m58-view-sync-perf-targeted-note-updates.md  01kw9dnybzecacbm75wqaaz02e-non-interactive-table-column-alignment.md  01kw9e3e6tdv2r5a79mwak0rtt-picker-fuzzy-search-full-content.md  01kw9z4fjqnvjstfem8a6q1maa-json-output-mode.md  01kwvcaj8c94yf3dgp3j0twyhf-readme-scripting-section-still-describes-tab-separated-output.md  01kwvcaj8c94yf3dgp3j0twyhg-panic-on-broken-pipe-when-stdout-reader-closes-early.md  01kwvczg18dprcrdja9dzzqzde-failed-new-leaves-malformed-note-file-in-all-notes.md  01kx5harvk9ngcxs7q63w8ge18-custom-typst-render-engine.md  01kx5n2ww5526gtfmhga2b8xe4-typst-engine-math-support-via-mitex.md  01ky7r9ean3b4bxs6fehpcg4ny-encrypted-vault-views.md  01ky7s0r1z2mcay4yahe0mwaap-implement-vault-encryption.md
(+205 files in other folders)
