[package]
name = "ntropy"
version = "1.0.0"
edition = "2024"
authors = ["Jakob Westhoff <jakob@westhoffswelt.de>"]
description = "An opinionated Markdown note-taking and management CLI."
homepage = "http://westhoffswelt.de"
repository = "https://github.com/jakobwesthoff/ntropy"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.26"
jiff = "0.2.29"
lsp-server = "0.8.0"
lsp-types = "0.97.0"
nucleo = "0.5.0"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
toml = "1.1.2"
ulid = "1.2.1"
unicode-width = "0.2.2"

[dev-dependencies]
assert_fs = "1.1.4"
insta = { version = "1.48.0", features = ["filters"] }
insta-cmd = "0.7.0"
tempfile = "3.27.0"

# Leaner distributed binary: thin LTO trims size with a modest compile cost,
# and stripping symbols shrinks it further. Runtime stays at the default
# release opt-level 3 (ADR 0020's soft performance target needs no more).
[profile.release]
lto = "thin"
strip = true
